css animation iphone fix

--- a/docs/style.css
+++ b/docs/style.css
@@ -145,11 +145,13 @@ piece {
     width: 100%;
     height: 100%;
     border-radius: 50%;
+    -webkit-perspective: 900000px;
+    perspective: 900000px;
 }
 
 .slot.red, .slot.yellow {
     cursor: default !important;
-    animation: .75s drop ease both;
+    animation: .75s drop ease backwards;
 }
 
 @keyframes drop {
